# romsearch

./: .gitignore  .readthedocs.yaml  CHANGES.rst  CODEOWNERS  MANIFEST.in  README.md  pyproject.toml  romsearch_gui.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  console_request.yml  feature_request.yml
.github/workflows/: build.yaml  build_test.yaml  publish.yaml
docs/: 1g1r.rst  conf.py  configs.rst  configuration.rst  index.rst  installation.rst  intro.rst  known_issues.rst  modules.rst  planned_changes.rst  reference_api.rst  utils.rst
docs/configs/: clonelists.rst  config.rst  dats.rst  defaults.rst  platforms.rst  regex.rst
docs/gui/: config_includes_excludes.rst  config_main.rst  config_modules.rst  config_platforms.rst  config_regions_languages.rst  intro.rst  rombrowser.rst
docs/modules/: datmapper.rst  datparser.rst  dupeparser.rst  gamefinder.rst  rahasher.rst  romassociator.rst  romchooser.rst  romcleaner.rst  romcompressor.rst  romdownloader.rst  rommover.rst  romparser.rst  rompatcher.rst  romsearch.rst
romsearch/: __init__.py
romsearch/configs/: defaults.yml  regex.yml  sample_config.yml
romsearch/configs/clonelists/: retool.yml
romsearch/configs/dats/: no-intro.yml  redump.yml
romsearch/configs/gui/: rom_regex.yml
romsearch/dev/: __init__.py  gamefinder_dev.py  parsing_tools.py  rahasher_dev.py
romsearch/gui/: __init__.py  gui_about.py  gui_config.py  gui_rombrowser.py  gui_romsearch.py  gui_utils.py  layout_about.py  layout_about.ui  layout_romsearch.py  layout_romsearch.ui
romsearch/modules/: __init__.py  datmapper.py  datparser.py  dupeparser.py  gamefinder.py  rahasher.py  romassociator.py  romchooser.py  romcleaner.py  romcompressor.py  romdownloader.py  rommover.py  romparser.py  rompatcher.py  romsearch.py
romsearch/scripts/: __init__.py  romsearch_gui.py
romsearch/util/: __init__.py  discord.py  general.py  io.py  logger.py  regex_matching.py
tests/: test_config.yml  tests_romchooser.py  tests_romparser.py
