[project]

name = "romsearch"
version = "0.0.8"
description = "One Stop ROM Shop"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "bbtufty"},
]
maintainers = [
    {name = "bbtufty"},
]

classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # License
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "colorlog>=6.8.2",
    "discordwebhook>=1.0.3",
    "numpy>=2.1.2",
    "packaging>=24.0",
    "pathvalidate>=3.2.0",
    "PySide6>=6.7.0",
    "pyyaml>=6.0.1",
    "wget>=3.2",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
docs = [
    "sphinx-automodapi>=0.17.0",
    "sphinx-rtd-theme>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/bbtufty/romsearch"
"Bug Reports" = "https://github.com/bbtufty/romsearch/issues"
"Source" = "https://github.com/bbtufty/romsearch"

[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel>=0.43.0",
    "setuptools_scm>=8.1.0",
]

build-backend = "setuptools.build_meta"