[project]

name = "romsearch"
version = "0.3.1"
description = "One Stop ROM Shop"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "bbtufty"},
]
maintainers = [
    {name = "bbtufty"},
]

classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # License
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "colorlog == 6.9.0",
    "discordwebhook == 1.0.3",
    "iso639-lang == 2.6.0",
    "numpy == 2.2.6",
    "packaging == 25.0",
    "pathvalidate == 3.2.3",
    "PySide6 == 6.9.1",
    "pyyaml == 6.0.2",
    "wget == 3.2",
    "xmltodict == 0.14.2",
]

[project.optional-dependencies]
docs = [
    "sphinx-automodapi == 0.19.0",
    "sphinx-rtd-theme == 3.0.2",
]

[project.gui-scripts]
romsearch = "romsearch:gui"

[project.urls]
"Homepage" = "https://github.com/bbtufty/romsearch"
"Bug Reports" = "https://github.com/bbtufty/romsearch/issues"
"Source" = "https://github.com/bbtufty/romsearch"

[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel>=0.43.0",
    "setuptools_scm>=8.1.0",
]

build-backend = "setuptools.build_meta"